--- a/namenode/Dockerfile
+++ b/namenode/Dockerfile
@@ -5,7 +5,7 @@ MAINTAINER Ivan Ermilov <ivan.s.ermilov@gmail.com>
 HEALTHCHECK CMD curl -f http://localhost:9870/ || exit 1
 
 ENV HDFS_CONF_dfs_namenode_name_dir=file:///hadoop/dfs/name
-RUN mkdir -p /hadoop/dfs/name
+RUN mkdir -p /hadoop/dfs/name && echo "deb http://archive.debian.org/debian stretch main" > /etc/apt/sources.list && apt-get update && apt-get install -y python3 python3-pip
 VOLUME /hadoop/dfs/name
 
 ADD run.sh /run.sh
